# python-cli-app-template

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: create-tag.yml  linters.yml  publish.yml  version-sync.yml
configs/: config.ini  dev.env  logging.ini
crud/: cli.py  config.py  log.py
crud/commands/: base.py  cmd_create.py  cmd_delete.py  cmd_read.py  cmd_update.py  factory.py
docs/: CONTRIBUTING.md
