[tool.poetry]
name = "python-cli-app-template"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "crud"}]

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.1.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pre-commit = "^3.2.2"
pyinstaller = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
files = ['crud/']
ignore_missing_imports = true

[tool.poetry.scripts]
cli-command = "crud.cli:main"
